force-app/main/default/objects/R360_Policy__mdt/R360_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Effective-dated Resource 360 policy values. Secrets and endpoint credentials are prohibited.</description>
    <label>Resource 360 Policy</label>
    <pluralLabel>Resource 360 Policies</pluralLabel>
</CustomObject>