force-app/main/default/objects/R360_Policy__mdt/fields/Boolean_Value__c.field-meta.xml
<CustomField><fullName>Boolean_Value__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Boolean Value</label><type>Checkbox</type></CustomField>