force-app/main/default/objects/R360_Policy__mdt/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Description</label><length>255</length><type>Text</type></CustomField>