force-app/main/default/objects/R360_Policy__mdt/fields/Effective_From__c.field-meta.xml
<CustomField><fullName>Effective_From__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Effective From</label><type>Date</type></CustomField>