force-app/main/default/objects/R360_Policy__mdt/fields/Effective_To__c.field-meta.xml
<CustomField><fullName>Effective_To__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Effective To</label><type>Date</type></CustomField>