force-app/main/default/objects/R360_Policy__mdt/fields/Numeric_Value__c.field-meta.xml
<CustomField><fullName>Numeric_Value__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Numeric Value</label><precision>18</precision><scale>4</scale><type>Number</type></CustomField>