force-app/main/default/objects/R360_Policy__mdt/fields/Text_Value__c.field-meta.xml
<CustomField><fullName>Text_Value__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Text Value</label><length>255</length><type>Text</type></CustomField>